--- a/package.json
+++ b/package.json
@@ -68,6 +68,12 @@
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   },
+  "pnpm": {
+    "overrides": {
+      "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5",
+      "micromatch@<4.0.8": ">=4.0.8"
+    }
+  },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
   },
